Fix dark mode bugs

--- a/styles/components/blocks/Contact.module.scss
+++ b/styles/components/blocks/Contact.module.scss
@@ -46,6 +46,6 @@
 	}
 
 	.contact__subheading {
-		@apply text-gray-500;
+		@apply text-gray-300;
 	}
 }
