--- a/styles/components/elements/Button.module.scss
+++ b/styles/components/elements/Button.module.scss
@@ -2,7 +2,7 @@
 	@apply inline-block py-2 px-4 xl:py-3 xl:px-5;
 	@apply rounded-full;
 	@apply bg-red-600 hover:bg-white;
-	@apply font-semibold text-white hover:text-red-600 text-xs uppercase;
+	@apply font-semibold text-xs text-white hover:text-red-600 uppercase;
 	@apply transition-colors ease-in-out duration-200;
 
 	svg {
